--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -10,4 +10,5 @@
     <string name="hello_blank_fragment">Hello blank fragment</string>
     <string name="card_test_title_text">如果上天再给我一次机会我也看不懂麦克斯韦方程组</string>
     <string name="card_test_tag_text">用户推荐日报</string>
+    <string name="flipper_image_placeholder">flipperBackground</string>
 </resources>
