--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,11 +4,16 @@
     <string name="navigation_drawer_open">Open navigation drawer</string>
     <string name="navigation_drawer_close">Close navigation drawer</string>
 
-    <string name="action_settings">Settings</string>
+    <string name="action_settings">设置</string>
 
 <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
     <string name="card_test_title_text">如果上天再给我一次机会我也看不懂麦克斯韦方程组</string>
     <string name="card_test_tag_text">用户推荐日报</string>
     <string name="flipper_image_placeholder">flipperBackground</string>
+    <string name="title_activity_artical">ArticalActivity</string>
+    <string name="action_share">分享</string>
+    <string name="action_star">收藏</string>
+    <string name="action_comment">评论</string>
+    <string name="action_like">赞</string>
 </resources>
