--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -21,4 +21,5 @@
     <string name="db_daily_map">db_map</string>
     <string name="nav_header_main_collection">我的收藏</string>
     <string name="nav_header_main_star">我的关注</string>
+    <string name="action_message">消息</string>
 </resources>
