--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">zhdaily</string>
+    <string name="app_name">知乎日报?</string>
 
     <string name="navigation_drawer_open">Open navigation drawer</string>
     <string name="navigation_drawer_close">Close navigation drawer</string>
@@ -22,4 +22,5 @@
     <string name="nav_header_main_collection">我的收藏</string>
     <string name="nav_header_main_star">我的关注</string>
     <string name="action_message">消息</string>
+    <string name="tool_bar_placeholder">..</string>
 </resources>
